<resources>
    <string name="app_name">ExamenMD02</string>
    <string name="ocultar">Ocultar</string>
    <string name="mostrar">Mostrar</string>
    <string name="examen_calificado_02">Examen Calificado 02</string>
    <string name="registrar">Registrar</string>
    <string name="direccion">direccion</string>
    <string name="ciudad">Ciudad</string>
    <string name="productos">Productos</string>
    <string name="numero_de_cliente">Numero de Cliente</string>
    <string name="nombre_cliente">Nombre Cliente</string>
    <string name="registro_de_pedidos">Registro de pedidos</string>
    <string name="pedido">Pedido</string>
</resources>