<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio02">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:hint="@string/registro_de_pedidos"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp"
            />

        <EditText
            android:id="@+id/edCustomerName"
            android:hint="@string/nombre_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginBottom="20dp"
            />
        <EditText
            android:id="@+id/edtNamberCustomer"
            android:hint="@string/numero_de_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_marginBottom="20dp"
            />
        <EditText
            android:id="@+id/edtProducts"
            android:hint="@string/productos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginBottom="20dp"
            />
        <EditText
            android:id="@+id/edtCity"
            android:hint="@string/ciudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
        <EditText
            android:id="@+id/edtAddress"
            android:hint="@string/direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:text="@string/registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>